0000060: Nova funcionalitat: gestió d'alertes (primera versió)
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium-core/branches/branch-2.0@82 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -121,6 +121,9 @@
 	<security-role>
 		<role-name>TOTHOM</role-name>
 	</security-role>
+	<security-role>
+		<role-name>tothom</role-name>
+	</security-role>
 
 	<security-constraint>
 		<web-resource-collection>
@@ -145,6 +148,7 @@
 			<role-name>HEL_ADMIN</role-name>
 			<role-name>HEL_USER</role-name>
 			<role-name>TOTHOM</role-name>
+			<role-name>tothom</role-name>
 		</auth-constraint>
 	</security-constraint>
 
