0000063: Integració amb el registre de la CAIB (Solucionat) A més s'ha modificat el WS de tramitació segons les peticions de la DGTIC i s'han solucionat els bugs que s'han anat trobant.
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium-core/branches/branch-2.0@88 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -126,6 +126,9 @@
 		<role-name>HEL_USER</role-name>
 	</security-role>
 	<security-role>
+		<role-name>HEL_WS</role-name>
+	</security-role>
+	<security-role>
 		<role-name>TOTHOM</role-name>
 	</security-role>
 	<security-role>
@@ -154,6 +157,7 @@
 		<auth-constraint>
 			<role-name>HEL_ADMIN</role-name>
 			<role-name>HEL_USER</role-name>
+			<role-name>HEL_WS</role-name>
 			<role-name>TOTHOM</role-name>
 			<role-name>tothom</role-name>
 		</auth-constraint>
