--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -6,6 +6,10 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/application-context.xml</param-value>
 	</context-param>
+	<context-param>
+		<param-name>log4jConfigLocation</param-name>
+		<param-value>/WEB-INF/classes/log4j.xml</param-value>
+	</context-param>
 
 	<resource-ref>
 		<description>Datasource de l'aplicació</description>
