--- a/helium-webapp/pom.xml
+++ b/helium-webapp/pom.xml
@@ -91,6 +91,12 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>axis</groupId>
+			<artifactId>axis</artifactId>
+			<version>1.4</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
 			<groupId>net.conselldemallorca</groupId>
 			<artifactId>helium-core</artifactId>
 			<version>2.1</version>
@@ -106,6 +112,13 @@
 		</dependency>
 		<dependency>
 			<groupId>net.conselldemallorca</groupId>
+			<artifactId>helium-plugin-api</artifactId>
+			<version>2.1</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.conselldemallorca</groupId>
 			<artifactId>helium-plugin-impl</artifactId>
 			<version>2.1</version>
 			<type>jar</type>
@@ -114,6 +127,24 @@
 	</dependencies>
 	<build>
 		<plugins>
+			<!--plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>properties-maven-plugin</artifactId>
+				<version>1.0-alpha-2</version>
+				<executions>
+					<execution>
+						<phase>initialize</phase>
+						<goals>
+							<goal>read-project-properties</goal>
+						</goals>
+						<configuration>
+							<files>
+								<file>build.properties</file>
+							</files>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin-->
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
