Millores en la generació del ear
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/trunk@121 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-ear/pom.xml
+++ b/helium-ear/pom.xml
@@ -29,6 +29,8 @@
 				<artifactId>maven-ear-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
+					<finalName>helium</finalName>
+					<applicationXml>${basedir}/src/main/application/META-INF/application.xml</applicationXml>
 					<modules>
 						<webModule>
 							<groupId>net.conselldemallorca</groupId>
