Millora en la generació del war depenent del servidor d'aplicacions
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/trunk@129 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/pom.xml
+++ b/helium-webapp/pom.xml
@@ -174,10 +174,7 @@
 		<profile>
 			<id>servidor-tomcat</id>
 			<activation>
-				<property>
-					<name>server.type</name>
-					<value>tomcat</value>
-				</property>
+				<activeByDefault>true</activeByDefault>
 			</activation>
 			<build>
 				<resources>
