--- a/helium-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/helium-webapp/src/main/webapp/WEB-INF/web.xml
@@ -442,7 +442,11 @@
 		<init-param>
 			<param-name>debug</param-name>
 			<param-value>true</param-value>
-		</init-param>		
+		</init-param>
+		<init-param>
+			<param-name>crossDomainSessionSecurity</param-name>
+			<param-value>false</param-value>
+		</init-param> 
 	</servlet>
 	<servlet>
 		<servlet-name>CXFServlet</servlet-name>
