- Comprovació signatura emprant la url de la CAIB - Millora en la publicació serveis web de Helium
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/branch-2.1@166 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-plugin-impl/pom.xml
+++ b/helium-plugin-impl/pom.xml
@@ -163,6 +163,24 @@
 					<target>1.5</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<artifactId>maven-jar-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>applet</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+						<phase>package</phase>
+						<configuration>
+							<finalName>signatura-applet-caib</finalName>
+							<includes>
+								<include>**/applet/*</include>
+							</includes>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 </project>
