Millorar la generació de l'ear emprant maven
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/branch-2.1@171 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-core/pom.xml
+++ b/helium-core/pom.xml
@@ -242,6 +242,12 @@
 			<version>2.2.1</version>
 			<type>jar</type>
 			<scope>compile</scope>
+			<exclusions>
+				<exclusion>
+					<artifactId>slf4j-api</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>net.sf.jodreports</groupId>
@@ -249,6 +255,12 @@
 			<version>2.4.0</version>
 			<type>jar</type>
 			<scope>compile</scope>
+			<exclusions>
+				<exclusion>
+					<artifactId>slf4j-api</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>asm</groupId>
@@ -293,6 +305,11 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-jdk14</artifactId>
+			<version>1.5.2</version>
+		</dependency>
+		<dependency>
 			<groupId>net.conselldemallorca</groupId>
 			<artifactId>helium-plugin-api</artifactId>
 			<version>2.1</version>
@@ -309,7 +326,6 @@
 			<artifactId>helium-disseny</artifactId>
 			<version>2.1</version>
 			<type>jar</type>
-			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 	<repositories>
