--- a/helium-webapp/pom.xml
+++ b/helium-webapp/pom.xml
@@ -75,6 +75,10 @@
 					<artifactId>itext</artifactId>
 					<groupId>com.lowagie</groupId>
 				</exclusion>
+				<exclusion>
+					<artifactId>slf4j-log4j12</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
