mid: 0000114 msg: Execució de handlers sense efecte
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/branch-2.1@198 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-disseny/pom.xml
+++ b/helium-disseny/pom.xml
@@ -47,6 +47,14 @@
 					<target>1.5</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>**/*Handler.*</exclude>
+					</excludes>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
