--- a/helium-disseny/pom.xml
+++ b/helium-disseny/pom.xml
@@ -6,9 +6,7 @@
 		<groupId>net.conselldemallorca</groupId>
 		<version>2.1</version>
 	</parent>
-	<groupId>net.conselldemallorca</groupId>
 	<artifactId>helium-disseny</artifactId>
-	<version>2.1</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -31,6 +29,13 @@
 			</exclusions>
 		</dependency>
 	</dependencies>
+	<repositories>
+		<repository>
+			<id>JBOSS</id>
+			<name>JBoss Repository</name>
+			<url>http://repository.jboss.org/nexus/content/groups/public/</url>
+		</repository>
+	</repositories>
 	<build>
 		<plugins>
 			<plugin>
