--- a/helium-util/pom.xml
+++ b/helium-util/pom.xml
@@ -6,9 +6,7 @@
 		<groupId>net.conselldemallorca</groupId>
 		<version>2.1</version>
 	</parent>
-	<groupId>net.conselldemallorca</groupId>
 	<artifactId>helium-util</artifactId>
-	<version>2.1</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -74,6 +72,13 @@
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-ws-security</artifactId>
 			<version>2.2.10</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.3</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
