mid: 0000130 msg: Dades errònies al enviar documents al portafirmes des d'un subprocés
mid: 0000131
msg: Millorar consultes avançades i afegir suport per a la generació d'informes

git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.2@226 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/displaytag.properties
+++ b/helium-webapp/src/main/resources/displaytag.properties
@@ -1,4 +1,5 @@
 #locale.provider=org.displaytag.localization.I18nSpringAdapter
+export.excel.class=org.displaytag.export.excel.ExcelHssfView
 
 paging.banner.no_items_found=<span class="pageBanner">No s&#39;ha trobat cap registre de tipus {0}.</span>
 paging.banner.one_item_found=<span class="pageBanner">S&#39;ha trobat un registre de tipus {0}.</span>
@@ -11,6 +12,6 @@ paging.banner.last=<span class="pageLinks">[<a href="{1}">Primer</a>/<a href="{2
 paging.banner.onepage=<span class="pageLinks">{0}</span>
 paging.banner.page.link=<a href="{1}" title="Anar a la pàgina {0}">{0}</a>
 
-export.banner=<div class="exportLinks">Opcions d&#39;exportació: {0}</div>
+export.banner=<div class="exportLinks">Exportar: {0}</div>
 
 basic.msg.empty_list=<span class="nothingFound">No hi ha cap registre donat d&#39;alta</span>
