mid: 0000131 msg: Millorar consultes avançades i afegir suport per a la generació d'informes
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.2@237 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/pom.xml
+++ b/helium-webapp/pom.xml
@@ -44,6 +44,12 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>2.1</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
 			<groupId>javax.activation</groupId>
 			<artifactId>activation</artifactId>
 			<version>1.1.1</version>
@@ -85,6 +91,12 @@
 			<groupId>displaytag</groupId>
 			<artifactId>displaytag-export-poi</artifactId>
 			<version>1.2</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>poi</artifactId>
+					<groupId>org.apache.poi</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.directwebremoting</groupId>
@@ -120,6 +132,21 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>4.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.groovy</groupId>
+			<artifactId>groovy-all</artifactId>
+			<version>1.5.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.7</version>
+		</dependency>
+		<dependency>
 			<groupId>net.conselldemallorca</groupId>
 			<artifactId>helium-core</artifactId>
 			<version>2.1</version>
@@ -146,16 +173,6 @@
 			<version>2.1</version>
 			<type>jar</type>
 			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>net.sf.jasperreports</groupId>
-			<artifactId>jasperreports</artifactId>
-			<version>4.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.codehaus.groovy</groupId>
-			<artifactId>groovy-all</artifactId>
-			<version>1.5.5</version>
 		</dependency>
 	</dependencies>
 	<build>
