--- a/helium-webapp/src/main/resources/displaytag.properties
+++ b/helium-webapp/src/main/resources/displaytag.properties
@@ -1,5 +1,6 @@
 #locale.provider=org.displaytag.localization.I18nSpringAdapter
-export.excel.class=org.displaytag.export.excel.ExcelHssfView
+#export.excel.class=org.displaytag.export.excel.ExcelHssfView
+export.excel.class=net.conselldemallorca.helium.webapp.mvc.util.HeliumHssfExportView
 
 paging.banner.no_items_found=<span class="pageBanner">No s&#39;ha trobat cap registre de tipus {0}.</span>
 paging.banner.one_item_found=<span class="pageBanner">S&#39;ha trobat un registre de tipus {0}.</span>
