mid: 0000143 msg: Permetre una URL externa de verificació de signatura
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/branch-2.0@240 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -498,6 +498,8 @@
 			<url-pattern>/services/*</url-pattern>
 			<url-pattern>/signatura/aFirma/*</url-pattern>
 			<url-pattern>/signatura/caib/*</url-pattern>
+			<url-pattern>/signatura/verificarExtern.html</url-pattern>
+			<url-pattern>/signatura/arxiu.html</url-pattern>
 			<url-pattern>/rol/test.html</url-pattern>
 		</web-resource-collection>
 	</security-constraint>
