mid: 0000131 msg: Millorar consultes avançades i afegir suport per a la generació d'informes
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.2@246 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-util/pom.xml
+++ b/helium-util/pom.xml
@@ -82,6 +82,11 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.7.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
