--- a/helium-webapp/src/main/resources/displaytag.properties
+++ b/helium-webapp/src/main/resources/displaytag.properties
@@ -2,10 +2,10 @@
 #export.excel.class=org.displaytag.export.excel.ExcelHssfView
 export.excel.class=net.conselldemallorca.helium.webapp.mvc.util.HeliumHssfExportView
 
-paging.banner.no_items_found=<span class="pageBanner">No s&#39;ha trobat cap registre de tipus {0}.</span>
-paging.banner.one_item_found=<span class="pageBanner">S&#39;ha trobat un registre de tipus {0}.</span>
-paging.banner.all_items_found=<span class="pageBanner">S&#39;han trobat {0} registres de tipus {1}, es mostren tots.</span>
-paging.banner.some_items_found=<span class="pageBanner">S&#39;han trobat {0} registres de tipus {1}, es mostren del {2} fins al {3}.</span>
+paging.banner.no_items_found=<span class="pageBanner">No s&#39;ha trobat cap  {0}.</span>
+paging.banner.one_item_found=<span class="pageBanner">S&#39;ha trobat un  {0}.</span>
+paging.banner.all_items_found=<span class="pageBanner">S&#39;han trobat {0} {1}, es mostren tots.</span>
+paging.banner.some_items_found=<span class="pageBanner">S&#39;han trobat {0} {1}, es mostren del {2} fins al {3}.</span>
 
 paging.banner.full=<span class="pageLinks">[<a href="{1}">Primer</a>/<a href="{2}">Anterior</a>] {0} [<a href="{3}">Següent</a>/<a href="{4}">Darrer</a>]</span>
 paging.banner.first=<span class="pageLinks">[Primer/Anterior] {0} [<a href="{3}">Següent</a>/<a href="{4}">Darrer</a>]</span>
