--- a/helium-plugin-impl/pom.xml
+++ b/helium-plugin-impl/pom.xml
@@ -63,9 +63,9 @@
 		<dependency>
 			<groupId>es.caib</groupId>
 			<artifactId>regweb-logic</artifactId>
-			<version>1.0</version>
+			<version>1.0.5</version>
 			<scope>system</scope>
-			<systemPath>${basedir}/../helium-webapp/src/main/webapp/WEB-INF/lib/logic-1.0-client.jar</systemPath>
+			<systemPath>${basedir}/../helium-webapp/src/main/webapp/WEB-INF/lib/logic-1.0.5-client.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>netscape</groupId>
@@ -107,6 +107,19 @@
 			<version>2.5.6.SEC02</version>
 			<type>jar</type>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core-tiger</artifactId>
+			<version>2.0.5.RELEASE</version>
+			<type>jar</type>
+			<scope>provided</scope>
+			<exclusions>
+				<exclusion>
+					<artifactId>spring-aop</artifactId>
+					<groupId>org.springframework</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.swinglabs</groupId>
