mid: 0000206 msg: El mètode per mostrar errors de validació a un Handler provoca una traça d'error
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.2@329 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
-web.realm.name=Limit Tecnologies
+web.realm.name=Govern de les Illes Balears
 web.session.timeout=30
 
 cas.sso.active=false
@@ -9,6 +9,6 @@ cas.sso.roles.source=custom-sql
 cas.sso.roles.query.jndi=java:comp/env/jdbc/HeliumDS
 cas.sso.roles.query.sql=select permis from hel_usuari_permis where codi=?
 
-appserv.jboss=false
+appserv.jboss=true
 
 javac.encoding=UTF-8
