--- a/helium-plugin-impl/pom.xml
+++ b/helium-plugin-impl/pom.xml
@@ -167,6 +167,7 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.0.1</version>
 				<configuration>
 					<fork>true</fork>
 					<compilerVersion>1.5</compilerVersion>
