mid: 0000226 msg: Els logs del JBoss surten per STDOUT
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.3@363 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/pom.xml
+++ b/helium-webapp/pom.xml
@@ -85,6 +85,10 @@
 					<artifactId>slf4j-log4j12</artifactId>
 					<groupId>org.slf4j</groupId>
 				</exclusion>
+				<exclusion>
+					<artifactId>jcl104-over-slf4j</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -140,6 +144,11 @@
 			<groupId>org.codehaus.groovy</groupId>
 			<artifactId>groovy-all</artifactId>
 			<version>1.5.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-jdk14</artifactId>
+			<version>1.4.3</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.poi</groupId>
